*Empty MediaWiki Message*

--- a/Анатомий.mw
+++ b/Анатомий.mw
@@ -1,4 +1,4 @@
-[[Файл:Lateral head anatomy detail.jpg|thumb]]'''Анатомий''' ( {{lang-el|ἀνα-}} — кӱшно да {{lang-el2|τέμνω}} — «пӱчкаш», «руаш») — [[биологий|биологийын]] раздел, кудо  [[организм]]-влакын [[Кап(биологий)|капым]] да тудын пай-шамычым шымла.
+[[Файл:Lateral head anatomy detail.jpg|thumb]]'''Анатомий''' ( {{lang-el|ἀνα-}} — кӱшно да {{lang-el2|τέμνω}} — «пӱчкаш», «руаш») — [[организм]]-влакын [[Кап(биологий)|капым]] да тудын пай-шамычым шымлыше [[биологий|биологийын]] ужашыже.
 
 == Анатомийым тыгай пайлан пайлат ==
 * '''[[кушкылын анатомий]] ''' — кушкылын да нунын пай-шамычым сыныма
