--- a/Агростофиллум.mw
+++ b/Агростофиллум.mw
@@ -26,14 +26,14 @@
 #''[[Agrostophyllum bilobolabellatum]]'' (Папуа-У Гвиней ).
 #''[[Agrostophyllum bimaculatum]]'' (У Гвиней).
 #''[[Agrostophyllum brachiatum]]'' (У Гвиней).
-*#''[[Agrostophyllum brachiatum]]'' var. ]]''brachiatum]]'' (У Гвиней). 
-*#''[[Agrostophyllum brachiatum]]'' var. ]]''latibrachiatum]]'' (У Гвиней). 
+##''[[Agrostophyllum brachiatum]]'' var. ]]''brachiatum]]'' (У Гвиней). 
+##''[[Agrostophyllum brachiatum]]'' var. ]]''latibrachiatum]]'' (У Гвиней). 
 #''[[Agrostophyllum brevipes]]'' (E. Himalaya to Indo-China).
 #''[[Agrostophyllum callosum]]'' (Nepal to Hainan)
 #''[[Agrostophyllum compressum]]'' (У Гвиней).
 #''[[Agrostophyllum crassicaule]]'' (У Гвиней, Bismarck Archipel).
-*#''[[Agrostophyllum crassicaule]]'' var. ]]''bismarckiense]]'' (Bismarck Arch.) 
-*#''[[Agrostophyllum crassicaule]]'' var. ]]''crassicaule]]'' (У Гвиней). 
+##''[[Agrostophyllum crassicaule]]'' var. ]]''bismarckiense]]'' (Bismarck Arch.) 
+##''[[Agrostophyllum crassicaule]]'' var. ]]''crassicaule]]'' (У Гвиней). 
 #''[[Agrostophyllum curvilabre]]'' (У Гвиней to Solomon Is.).
 #''[[Agrostophyllum cyathiforme]]'' (W. Малайзий).
 #''[[Agrostophyllum cycloglossum]]'' (У Гвиней).
