--- a/Агростофиллум.mw
+++ b/Агростофиллум.mw
@@ -101,8 +101,8 @@
 #''[[Agrostophyllum spicatum]]'' (У Гвиней).
 #''[[Agrostophyllum stenophyllum]]'' (У Гвиней.).
 #''[[Agrostophyllum stipulatum]]'' (Indo-China, Малайзий to Solomon Is.) 
-*#''Agrostophyllum stipulatum'' subsp. ''bicuspidatum'' (W. Малайзий).
-*#''Agrostophyllum stipulatum'' subsp. ''stipulatum'' (Indo-China, Малайзий to Solomon Is.)
+##''Agrostophyllum stipulatum'' subsp. ''bicuspidatum'' (W. Малайзий).
+##''Agrostophyllum stipulatum'' subsp. ''stipulatum'' (Indo-China, Малайзий to Solomon Is.)
 #''[[Agrostophyllum sumatranum]]'' (W. Sumatra, Borneo).
 #''[[Agrostophyllum superpositum]]'' (У Гвиней to Solomon Is.).
 #''[[Agrostophyllum tenue]]'' (W. Малайзий)..
