--- a/Акрет_Греций.mw
+++ b/Акрет_Греций.mw
@@ -1,6 +1,6 @@
 [[Файл:Ac.parthenon5.jpg|thumb|350px|Парфенон]]
 
-'''Акрет Греций''' (руш. "Древняя Греция") ('''Эллада'''; {{lang-el|Αρχαία Ελλάδα}}) — мемнан курым деч III—I тӱжем ий ончыч Балкан пелотрошто, Эгей теҥызын отро-влакыште, Фракий теҥыз серыште, да Изи Азийын касвел теҥыз серыштыже верланыше калык илыме вер.
+'''Акрет Греций''' (руш. "Древняя Греция") ('''Эллада'''; {{lang-el|Αρχαία Ελλάδα}}) — мемнан курым деч III—I тӱжем ий ончыч [[Балкан пелотро]]што, [[Эгей теҥыз]]ын отро-влакыште, [[Фракий теҥыз]] серыште, да Изи Азийын касвел теҥыз серыштыже верланыше калык илыме вер.
 
 [[Категорий:Греций]]
 
