*Empty MediaWiki Message*

--- a/Тӱнямбал_тептеҥыз.mw
+++ b/Тӱнямбал_тептеҥыз.mw
@@ -1,9 +1,9 @@
 [[Файл:Physical world.jpg|thumb|310px|Тӱнямбал карте. Тептеҥыз-влакым канде тӱс дене ончыктымо.]]
-'''Тӱнямбал тептеҥыз'''({{lang-ru|''Мирово́й океа́н''}}) — гидросферын тӱҥ ужашыже (94,1 % айла), [[Мланде|Мландын]] [[вӱд]] ужашыже, [[материк]] да [[отро]]-влакым авыра.
+'''Тӱнямбал тептеҥыз''' ({{lang-ru|''Мирово́й океа́н''}}) — гидросферын тӱҥ ужашыже (94,1 % айла), [[Мланде|Мландын]] [[вӱд]] ужашыже, [[материк]] да [[отро]]-влакым авыра.
 [[Континент]] да кугу [[архипелаг]]-влак тӱнямбал тептеҥызым вич кугу ужашлан ([[тептеҥыз]]лан шелеш):
 * [[Атлантик тептеҥыз]]
 * [[Индий тептеҥыз]]
-* [[Иян Йӱдвел тептеҥыз]]
+* [[Йӱдвел тептеҥыз]]
 * [[Тыныс тептеҥыз]]
 * [[Кечывалвел тептеҥыз]]
 
