--- a/Пӱртӱс.mw
+++ b/Пӱртӱс.mw
@@ -1,4 +1,4 @@
-'''Пӱртӱс''' ({{lang-ru|''природа''}}) — йырым-йырысе чыла вер-шӧр ойыртем<ref>http://dict.marlamuter.ru/index.php/?a=srch&d=17&id_srch=61fb4e9299d6fcb4373f72b31d37e15c&il=ru&p=1&visualtheme=gw_brand</ref>. Чӱчкыдын пӱртӱс мут дене лӱмдат тудым, мом [[айдеме]] шке огыл ыштен. Пӱртӱс чонан да чондымылан шелалтеш.
+'''Пӱртӱс''' ({{lang-ru|''природа''}}) — йырым-йырысе чыла вер-шӧр ойыртем<ref>[http://marlamuter.org/muter/10_томан/пӱртӱс Пӱртӱс мут 10-томан Марла-Рушла мутерыште]</ref>. Чӱчкыдын пӱртӱс мут дене лӱмдат тудым, мом [[айдеме]] шке огыл ыштен. Пӱртӱс чонан да чондымылан шелалтеш.
 
 == Чондымо ==
 Чондымо материй - вещества да кумдык-влак. Вселенныйыште чыла вещества-влак радамлалтыт: тӱҥлык пырче (элементарный частице), атом, молекул, макротела, кавасе объект-влак, шӱдыр-влак, галактике-влак. Вещество тӱрлӧ агрегат состоянийыште лийын кертеш (мутлан, газ, вӱд, пеҥгыде объект, плазма).
