--- a/Категорий:Пӱртӱс.mw
+++ b/Категорий:Пӱртӱс.mw
@@ -4,7 +4,7 @@
 {{Commonscat|Nature}}
 <br clear="both" />
 
-[[Категорий:Лаштык-влак]]
+[[Категорий:Илыш]]
 
 [[af:Kategorie:Natuur]]
 [[als:Kategorie:Natur]]
