Отмена правки 59779 участника [[Special:Contributions/Kmoksy|Kmoksy]] ([[User talk:Kmoksy|обсуждение]])

--- a/Категорий:Пӱртӱс.mw
+++ b/Категорий:Пӱртӱс.mw
@@ -4,7 +4,7 @@
 {{Commonscat|Nature}}
 <br clear="both" />
 
-[[Категорий:Илыш]]
+[[Категорий:Лаштык-влак]]
 
 [[af:Kategorie:Natuur]]
 [[als:Kategorie:Natur]]
