--- a/Алтенштайний.mw
+++ b/Алтенштайний.mw
@@ -31,6 +31,7 @@
 [[de:Altensteinia]]
 [[en:Altensteinia]]
 [[es:Altensteinia]]
+[[mrj:Алтенштайни]]
 [[nl:Altensteinia]]
 [[pt:Altensteinia]]
 [[vi:Altensteinia]]
