*Empty MediaWiki Message*

--- a/Ампароа.mw
+++ b/Ампароа.mw
@@ -8,6 +8,7 @@
 | тӱча = Asparagales
 | йамагат = [[Orchidaceae]]
 | ӱлылйамагат = Orchidoideae
+урлык = '''Amparoa'''
 | subdivision_ranks = Тӱрлык-влак
 | subdivision = 
 }}
