*Empty MediaWiki Message*

--- a/Лӱдизий.mw
+++ b/Лӱдизий.mw
@@ -1,7 +1,7 @@
 {{Таксаҥа
 | лӱм = Лӱдизий
-| сӱрет =  Koellensteinia carraoensis - infl.jpg
-| сӱрет_вуймут =  ''Koellensteinia carraoensis''
+| сӱрет =  Ludisia discolor.jpg
+| сӱрет_вуймут =  
 | кугыжаныш = [[Кушкыл]]
 | пӧлка = Magnoliophyta 
 | класс = Magnoliopsida 
