*Empty MediaWiki Message*

--- a/Венгр_йылме.mw
+++ b/Венгр_йылме.mw
@@ -17,8 +17,9 @@
 |ISO3 =hun
 }}
 
-'''Веҥгр йылме''' (веҥгрла: ''Magyar'') — финн-угр йылме. [[Веҥгрий]]ыште кугыжаныш йылме улеш.
-
+'''Веҥгр йылме''' (веҥгрла: ''Magyar'') — финн-угр йылме. [[Веҥгрий]]ыште кугыжаныш йылме улеш.  ПешСай (22:22:59 28/05/2011)
+А как там фильм называется про хакера-маньяка?
+Веҥгр йылме (...) - урал йылме, угр тӱшка гыч, финн, эстон да икмыняр Российысе улшо миноритор йылме гай улеш. Йывропышто тудо эн кугу индо-йывропысо огыл йылме улеш.
 [[Категорий:Угор йылме-влак]]
 
 [[af:Hongaars]]
