*Empty MediaWiki Message*

--- a/Кышкар:Пайдаланыше_udm-4.mw
+++ b/Кышкар:Пайдаланыше_udm-4.mw
@@ -1,7 +1,7 @@
 {{User lang
 | lang = udm
-| name = Одо йылме
+| name = Удмурт кыл
 | level = 4
-| size = 13
-| info =Тиде пайдаланыше '''[[:Категорий:Пайдаланыше udm|одо йылмым]]''' '''[[:Категорий:Пайдаланыше udm-4|шке шочмо йылме семын]]''' пала.
+| size = 11
+| info = Со адями '''[[:Категориq:User udm|удмурт кылэз]] [[:Категориq:User udm-4| анай кылэз кадь]]''' тодэ
 }}
