*Empty MediaWiki Message*

--- a/Венгр_йылме.mw
+++ b/Венгр_йылме.mw
@@ -17,8 +17,8 @@
 |ISO3 =hun
 }}
 
-'''Веҥгр йылме''' (веҥгрла: ''Magyar'') — финн-угр йылме. [[Веҥгрий]]ыште кугыжаныш йылме улеш.  
-Веҥгр йылме (...) - урал йылме, угр тӱшка гыч, финн, эстон да икмыняр Российысе улшо миноритор йылме гай улеш. Йывропышто тудо эн кугу индо-йывропысо огыл йылме улеш.
+'''Веҥгр йылме''' ({{lang-hu|''Magyar''}}) — финн-угр йылме. [[Веҥгрий]]ыште [[кугыжаныш йылме]] улеш.  
+Веҥгр йылме - урал йылме, угр тӱшка гыч, финн, эстон да икмыняр Российысе улшо миноритор йылме гай улеш. 
 [[Категорий:Угор йылме-влак]]
 
 [[af:Hongaars]]
