*Empty MediaWiki Message*

--- a/Коала.mw
+++ b/Коала.mw
@@ -14,7 +14,7 @@
 | урлык = Phascolarctos
 | тӱрлык = Phascolarctos cinereus
 }}
-'''Коала''' але '''Сумкан маска''' ({{lang-la|Phascolarctos cinereus}} ) –  Касвел да Кечывалвел [[Австралий]]ын Phascolarctidae йамагатын гыч кугу [[калтан янлык]]. ''Phascolarctos'' урлыкын икте тӱрлыкше.
+'''Коала''' але '''Калтан маска''' ({{lang-la|Phascolarctos cinereus}} ) –  Касвел да Кечывалвел [[Австралий]]ын Phascolarctidae йамагатын гыч кугу [[калтан янлык]]. ''Phascolarctos'' урлыкын икте тӱрлыкше.
 
 
 [[Категорий:Калтан янлык-влак]]
