*Empty MediaWiki Message*

--- a/Калтан_янлык-влак.mw
+++ b/Калтан_янлык-влак.mw
@@ -1,7 +1,7 @@
 {{Таксаҥа
 | лӱм = Калтан янлык-влак
 | сӱрет = Koala climbing tree.jpg
-| сӱрет_вуймут =  '''Коала''' але '''сумкан маска''' 
+| сӱрет_вуймут =  '''Коала''' але '''калтан маска''' 
 | кугыжаныш = [[Янлык]]
 | пӧлка = Хордан (Chordata)
 | класс = Mammalia 
