*Empty MediaWiki Message*

--- a/Калтан_арыслан.mw
+++ b/Калтан_арыслан.mw
@@ -13,7 +13,7 @@
 | subdivision_ranks = Тӱрлык-влак
 | subdivision = 3 наре тӱрлык-влак.
 }}
-'''Калтан арыслан''' ({{lang-la|Thylacoleo}} ) –  [[Австралий]]ын Thylacoleonidae йамагатын гыч кугу [[калтан янлык]]. Чылаже [[плейстоцен]]ын фоссил 3 еш куэ уло.
+'''Калтан арыслан''' ({{lang-la|Thylacoleo}} ) –  [[Австралий]]ын Thylacoleonidae йамагат гыч кугу [[калтан янлык]]. Чылаже [[плейстоцен]]ын фоссил 3 еш куэ уло.
 
 == Тӱрлык-влак == 
 *† ''[[Thylacoleo carnifex]]''
