--- a/Семлызе.mw
+++ b/Семлызе.mw
@@ -8,7 +8,7 @@
 * Чюрлёнис лӱман семлызын ушыжо пудыраҥын. Тыгай-влаклан эмлымверыштак колен.
 * Игнацы Ян Падеревский семлызе Польшын премьер-министрже лийын, Верди - депутат; Берлиоз ден Вагнер революцийлаште кредалыныт.
 * Джон Кейдж семлызе «4′33″» пьесыж дене чапланен. Ныл минут, кумло кум секунд жапыште тиде пьесыште ик йӱкат ок йоҥгалт.
-* Чӱчкыдын мутлан семым келыштарымаш семлызе пашалан шотлалт ок керт, тыште семлызе технике ок кучылталт. Тыге, бард-влак семлызе огытыл.
+* Чӱчкыдын мутлан семым келыштарымаш семлызе пашалан шотлалт ок керт, тыште семлызе технике ок кучылт. Тыге, бард-влак семлызе огытыл.
 
 == Марий семлызе-влак ==
 <div class="references-small" style="-moz-column-count:2; column-count:2; -webkit-column-count:2;">
