/* Марий семлызе-влак */

--- a/Семлызе.mw
+++ b/Семлызе.mw
@@ -28,7 +28,7 @@
 * [[Иван Егоров]]
 * [[Алексей Яшмолкин]]
 * [[Валерий Тихонов]]
-* [[Эрик Сапаев]
+* [[Сапаев, Эрик Никитич|Эрик Сапаев]]
 * [[Юрий Бурдаков]]
 * [[Мефодий Петров]]
 * [[Ион Кузьмин]]
