Отмена правки 60090 участника [[Special:Contributions/77.40.82.243|77.40.82.243]] ([[User talk:77.40.82.243|обсуждение]])

--- a/Шакиров,_Станислав_Алексеевич.mw
+++ b/Шакиров,_Станислав_Алексеевич.mw
@@ -10,4 +10,29 @@
 == Чап лӱм-влак ==
 "Мари" тӱшка дене пырля гастроль дене Марий Эл да пошкудо кундемлаште лиеден. Нуно марий эстрадын кӱкшытшым [[Суоми]]ште, [[Эстоний]]ыште, [[Венгрий]]ыште ончыктеныт. [[1997]] ийыште Станислав Шакировлан "Марий Элын сулло артистше", а [[2000]] ийыште "Марий Элын калык артистше" лӱмым пуэныт.
 
-ГРУППА МАРИ  ВАСИЛИЙ ЧЕРНОВ АЛЕКСАНДР ПЕТУХОВ АНТОНИ САВИН  ВИТАЛИЙ РУКАВИШНКИОВ ВАЛЕРИЙ ФОНАРЕВ
+== [[Марий Эл Радио]]што йоҥгышо муро-влакше ==
+* Вучо вашмутым
+* Ит чамане
+* Какшан сер ӱмбалне ломбо
+* Кушто тый улат гын
+* Лум пеледыш
+* Муро маныт
+* Мый улам тылат кӧра
+* Ой йолташем
+* Поч тӧрзатым
+* Пу муретым
+* Рвезе пагытем
+* Туге мо
+* Тый дечет посна
+* Тылат
+* Чолга муро
+* Шочмо-кушмо верем
+* Шошо пагыт
+* Элнет
+* Э-э-э ха-ха
+
+[[Категорий:Тиштер почеш палыме еҥ-влак]]
+[[Категорий:Марий семмастар]]
+[[Категорий:Марий семлызе]]
+[[Категорий:Марий Элын сулло артистше]]
+[[Категорий:Марий Элын калык артистше]]
