--- a/Йоаний.mw
+++ b/Йоаний.mw
@@ -22,6 +22,7 @@
 # ''[[Yoania japonica]]''  <small>Maxim.  (1873)</small> Typus Species
 # ''[[Yoania prainii]]''  <small>King & Pantl. (1898)</small>
 
+{{commons|Yoania}}
 [[Категорий:Орхидей-влак]]
 {{stub}}
 
