*Empty MediaWiki Message*

--- a/Хисис.mw
+++ b/Хисис.mw
@@ -9,7 +9,7 @@
 | йамагат = [[Orchidaceae]]
 | ӱлылйамагат = Epidendroideae
 | йыжыҥ = Epidendreae
-| ӱлылйыжыҥ = Chysinae
+| ӱлылйыжыҥ = '''Chysinae'''
 | урлык = '''Chysis'''
 | subdivision_ranks = Тӱрлык-влак
 | subdivision = 10 наре тӱрлык-влак.
