*Empty MediaWiki Message*

--- a/Цератостилис.mw
+++ b/Цератостилис.mw
@@ -1,6 +1,6 @@
 {{Таксаҥа
 | лӱм = Цератостилис
-| сӱрет =  Chysis laevis.jpg
+| сӱрет =  Ceratostylis retisquama - Flickr 003.jpg
 | сӱрет_вуймут =  ''Ceratostylis retisquama''
 | кугыжаныш = [[Кушкыл]]
 | пӧлка = Magnoliophyta 
