--- a/Орлеанезий.mw
+++ b/Орлеанезий.mw
@@ -21,7 +21,7 @@
 * ''Pseudorleanesia'' <small>[[Rauschert]] (1983)</small>
 
 == Тӱрлык-влак == 
-# ''[[Orleanesia amazonica]]'' <small>[[Barb.Rodr.]] (1877)</small> - [[especie tipo]]
+# ''[[Orleanesia amazonica]]'' <small>[[Barb.Rodr.]] (1877)</small> -
 # ''[[Orleanesia cuneipetala]]'' <small>[[Pabst]] (1955)</small>
 # ''[[Orleanesia ecuadorana]]'' <small>[[Dodson]] (1997)</small>
 # ''[[Orleanesia maculata]]'' <small>[[Garay]] (1956)</small>
