--- a/Каулартрон.mw
+++ b/Каулартрон.mw
@@ -18,7 +18,7 @@
 
 == Тӱрлык-влак == 
 # ''[[Caularthron amazonicum]]'' Тринидад, Венесуэла да кечывалвел Бразилий.
-# ''[[Caularthron bicornutum]]'' йыдпел Кечӹвӓлвел Америка.
+# ''[[Caularthron bicornutum]]'' йӱдвел Кечывалвел Америка.
 # ''[[Caularthron bilamellatum]]'' Мексика - Бразилий.
 # ''[[Caularthron kraenzlinianum]]'' Кариб.
 
