--- a/Цефалантера.mw
+++ b/Цефалантера.mw
@@ -19,7 +19,7 @@
 '''Цефалантера''' ({{lang-la|Cephalanthera}} ) –  [[Орхидей-влак]] кушкыл-влакын тукымыш пура, [[Евразий]]ын, [[Африка|Африкын]] да [[Америка|Америкын]] шуко верлаште кушшо [[пеледыш (кушкыл)|пеледыш]]. Чылаже 18 еш куэ уло.
 
 == Тӱрлык-влак == 
-=== Европа, Йӱдвел да Касвел Азий ===
+=== Европо, Йӱдвел да Касвел Азий ===
 * '' [[Cephalanthera caucasica]]''
 * ''[[Cephalanthera cucullata]]''
 * ''[[Cephalanthera damasonium]]''
