--- a/Каҥашымаш:Суасэл_Республик.mw
+++ b/Каҥашымаш:Суасэл_Республик.mw
@@ -11,3 +11,4 @@
 **Kabul ediyorum. Teşekkür ederim! / Келшем. Тау! [[Пайдаланыше:Azimbaj|Azimbaj]] 11:57, 23 Ӱярня 2011 (UTC)
 
 * Мне уже надоело высказывать своё мнение по этому поводу, ну раз просят: ещё раз. Всё определяется ТРАДИЦИЕЙ и в каждом языке она своя, географические названия складываются исторически, и нет ничего зазорного, если в устной речи и СМИ используются заимствованные слова — будь то славянские, тюркские или германские, ибо так сложилось. И нечего ничего выдумавать! Использует же «НЕСОЗНАТЕЛЬНЫЙ» германский народ англичане латинское Montenegro и им в голову не прийдёт переделывать его в Blackmountainland. По поводу Суас Эл: у марийцев есть собственный этноним для народов, с которыми они общались, в т.ч. для татар. Суас Эл означает просто «Татарстан» (Страна Татар), а не «Республика Татарстан» и статья называется просто «Татарстан», всё в рамках традиции. Также поддерживаю названия Одо Эл и Пошкырт Эл. Вероятно, следует оставить Немыч Эл, сохранив оригинальный, хотя, опять же, заимствованный этноним «немыч». Но всё остальное — либо сомнительно, либо чистой воды словотворчество википедистов. [[Пайдаланыше:Yufereff|Yufereff]] 20:52, 24 Ӱярня 2011 (UTC)
+**В том-то и дело, что в марийском языке кроме как Марий Эл, ни одна друга республика и государство официально не называются и не пишутся с Эл, это придумал Azimbaj. У марийского языка свои традиции, марийцы не говорят и не пишут Суас Эл, марийцы говорят и пишут: Татарий, Татарстан, не Немыч Эл, а Германий, Финляндий (Суоми) и т.д. Единственное о Башкортостане говорят еще Пошкырт кундем, а также Башкирий и Башкортостан. При таких спорных вопросах надо обращаться к современной марийской орфографии и писать согласно правилам современного марийского языка. Почему 2 человека здесь в Википедии устроили полный диктат и навязывают свое мнение, издеваются и глумятся над марийским языком как им предрассудится?  Хватит уже пугать людей своим корявым, страшным искусственным языком! Люди из этой Википедии бегут именно из-за беспредела устроенного Azimbaj-ем и Пеш Сай. [[Пайдаланыше:Vasli|Vasli]] 15:57, 5 Пеледыш 2011 (UTC)
