--- a/Тайний.mw
+++ b/Тайний.mw
@@ -55,7 +55,7 @@
 # ''[[Tainia scapigera]]'' <small> (Hook.f.) J.J.Sm. (1912)</small>
 # ''[[Tainia serratiloba]]'' <small> Ormerod (2005)</small>
 # ''[[Tainia simondii]]'' <small> (Seidenf. ex Aver.) ined.</small>
-# ''[[Tainia speciosa]]'' <small> Blume (1825)</small> - '''especie tipo'''
+# ''[[Tainia speciosa]]'' <small> Blume (1825)</small> 
 # ''[[Tainia trinervis]]'' <small> (Blume) Rchb.f. (1857)</small>
 # ''[[Tainia vegetissima]]'' <small> Ridl. (1908)</small>
 # ''[[Tainia viridifusca]]'' <small> (Hook.) Benth. ex Hook.f. (1890)</small>
