--- a/Чуваш.mw
+++ b/Чуваш.mw
@@ -14,6 +14,7 @@
 
 
 [[Категорий:Чуваш|*]]
+[[Категорий:Чуваший]]
 [[Категория:Россий калык]]
 [[Категория:Украина калык]]
 [[Категория:Суас Эл калык]]
