--- a/Энциклопедий.mw
+++ b/Энциклопедий.mw
@@ -7,8 +7,8 @@
 Посна пашаеҥ-влаклан келыштарыме энциклопедий-влакат улыт, мутлан, сар паша, юриспруденций, философий, медицине нерген.
 
 == Материалым кычалмаш ==
-Энциклопедий дене йӧнанрак пайдаланаш манын, возышо-влак материалым системе почеш вераҥдат. Икымше - [[алфавит]] системе. [[Мутер]] семын чыла предмет-влакым алфавит радам дене почыла возымо. Кокымшо - иерархий системе. Чыла информацийым тӱшка-влак дене вераҥдыме, мутлан, 12-томан Йоча энциклопедий.
-Кызытсе электрон технологий-влак мутым кычалашлан у йӧным пуат. Тӱҥ мутым возет - интернет тылат шке кӱлеш информацийым пуа.
+Энциклопедий дене йӧнанрак пайдаланаш манын, возышо-влак материалым системе почеш вераҥдат. Икымше - [[алфавит]] системе. [[Мутер]] семын чыла предмет-влакым алфавит радам дене почела возымо. Кокымшо - иерархий системе. Чыла информацийым тӱшка-влак дене вераҥдыме, мутлан, 12-томан Йоча энциклопедий.
+Кызытсе электрон технологий-влак мутым кычалашлан у йӧным пуат. Тӱҥ мутым возет - интернет тылат шке кӱлеш информацийым кычал пуа.
 
 [[Категорий:Энциклопедий]]
 [[Категорий:Книга-влак]]
