--- a/Каҥашымаш:Суасэл_Республик.mw
+++ b/Каҥашымаш:Суасэл_Республик.mw
@@ -14,3 +14,4 @@
 **В том-то и дело, что в марийском языке кроме как Марий Эл, ни одна друга республика и государство официально не называются и не пишутся с Эл, это придумал Azimbaj. У марийского языка свои традиции, марийцы не говорят и не пишут Суас Эл, марийцы говорят и пишут: Татарий, Татарстан, не Немыч Эл, а Германий, Финляндий (Суоми) и т.д. Единственное о Башкортостане говорят еще Пошкырт кундем, а также Башкирий и Башкортостан. При таких спорных вопросах надо обращаться к современной марийской орфографии и писать согласно правилам современного марийского языка. Почему 2 человека здесь в Википедии устроили полный диктат и навязывают свое мнение, издеваются и глумятся над марийским языком как им предрассудится?  Хватит уже пугать людей своим корявым, страшным искусственным языком! Люди из этой Википедии бегут именно из-за беспредела устроенного Azimbaj-ем и Пеш Сай. [[Пайдаланыше:Vasli|Vasli]] 15:57, 5 Пеледыш 2011 (UTC)
 ***Vasli, если я не ошибаюсь, вы предлагали, писать слитно Суасэл, но при этом призываете к соблюдению марийских традиций. Но, вот тут встает вопрос, почему именно слитно, ведь слитное написание татарСТАН - это не есть марийская традиция, это либо славянская традиция (ПетроГРАД, либо тюркская ТатарСТАН) марийскую традицию можно посмотреть в написании марийской республики "Марий Эл", получается марийская традиция - писать коренной народ и затем слово Эл - как обозначение государства. (Республика - это государство в государстве получается). Ну и по конституции обозначения Марий Эл и Марий Эл Республик являются равнозначными. Следовательно по всем марийским традициям получается именно "Суас Эл"(Суас Эл Республик), "Пошкырт Эл" (Пошкырт Эл Республик), разве здесь не все логично?--[[Пайдаланыше:ПешСай|ПешСай]] 17:37, 5 Пеледыш 2011 (UTC)
 :::: Советую посмотреть в "Марий орфографий мутер" Ивана Григорьевича Иванова. Там он предлагает писать "Марийэл". Именно слитно, потому что это по его мнению соответствует фонетике.--[[Пайдаланыше:Санюн Вадик|Санюн Вадик]] 17:42, 5 Пеледыш 2011 (UTC)
+Пошкырт Эл (или Пошкыртэл) или Пошкырт кундем, Суас Эл и т.д. - это разговорные названия. Если мы сейчас позволим себе так их официально называть, то другим, получается, можно будет Марий Эл называть как захочется - Мариландия, Черемиссия, Мариэлия и т.д. Надо уважать братьев "инородцев-нацменов" и раз уж они ввели в оборот Татарстан, то надо так и использовать в официальном режиме. Всякие там Монтенегро - суть имена, придуманные колонизаторами, которые не хотели брать в расчет родные для проживающих в этих странах названия. Должны ли мы им уподобляться? [[Пайдаланыше:Cseremisz Elian|Cseremisz Elian]] 15:26, 6 Пеледыш 2011 (UTC)
