--- a/Каҥашымаш:Компучыр.mw
+++ b/Каҥашымаш:Компучыр.mw
@@ -32,3 +32,4 @@
 :В «Словаре терминов по информатике на марийском языке для общеобразовательных школ», ISBN 978-963-9876-48-4, Одобрено термино-орфографической комиссией Республики Марий Эл (протокол заседания № 8 от 20.04.2011 г.). Редактор: Иванов И. Г., доктор филологических наук, профессор, заместитель директора по научной работе Института финно-угроведения ГОУВПО «Марийский государственный университет» термин «компью́тер» переводится на марийский язык как «компью́тер - информацийым пашалаш, аралаш да вончештарылаш (трансферлаш) кучылталтше аппарат (технике) да программе комплекс.» (стр.20).--[[Пайдаланыше:Lifeway|Lifeway]] 14:25, 4 Пеледыш 2011 (UTC)
 ::В Правилах орфографии и пунктуации марийского языка - Марий орфографий мутер / Йылмым, литературым да историйым научнын шымлыше В.М. Васильев лӱмеш марий институт. – Йошкар-Ола, 2011. – 368 с. ISBN 978-5-94950-059-0 термин «компью́тер» на марийском языке пишется как «компью́тер» (стр.141).--[[Пайдаланыше:Lifeway|Lifeway]] 14:29, 4 Пеледыш 2011 (UTC)
 :::Я за введение новых терминов, неологизмов - без этого нельзя. Но нельзя придумывать термины необдуманно, идущие вразрез со здравым смыслом, такие как [[Компучыр]], тем более без знания марийского языка.--[[Пайдаланыше:Lifeway|Lifeway]] 14:56, 4 Пеледыш 2011 (UTC)
+::::Lifeway, вы можете сейчас, также как и могли делать это раньше, взять и переименовать страницу и отредактировать весь текст, вам никто не мешал и не мешает этого сделать в рамках правил википедии. Лично я буду только за, если вы проявите такую активность. Википедия - открыта для редактирования каждому, никто здесь никому не должен мешать и никто не должен влиять на мнение другого. Также в википедии можно свободно редактировать тексты, написанные другими участниками, в википедии это не считается зазорным, а наоборот приветствуется.--[[Пайдаланыше:ПешСай|ПешСай]] 11:58, 6 Пеледыш 2011 (UTC)
