--- a/Каҥашымаш:Компучыр.mw
+++ b/Каҥашымаш:Компучыр.mw
@@ -33,3 +33,4 @@
 ::В Правилах орфографии и пунктуации марийского языка - Марий орфографий мутер / Йылмым, литературым да историйым научнын шымлыше В.М. Васильев лӱмеш марий институт. – Йошкар-Ола, 2011. – 368 с. ISBN 978-5-94950-059-0 термин «компью́тер» на марийском языке пишется как «компью́тер» (стр.141).--[[Пайдаланыше:Lifeway|Lifeway]] 14:29, 4 Пеледыш 2011 (UTC)
 :::Я за введение новых терминов, неологизмов - без этого нельзя. Но нельзя придумывать термины необдуманно, идущие вразрез со здравым смыслом, такие как [[Компучыр]], тем более без знания марийского языка.--[[Пайдаланыше:Lifeway|Lifeway]] 14:56, 4 Пеледыш 2011 (UTC)
 ::::Lifeway, вы можете сейчас, также как и могли делать это раньше, взять и переименовать страницу и отредактировать весь текст, вам никто не мешал и не мешает этого сделать в рамках правил википедии. Лично я буду только за, если вы проявите такую активность. Википедия - открыта для редактирования каждому, никто здесь никому не должен мешать и никто не должен влиять на мнение другого. Также в википедии можно свободно редактировать тексты, написанные другими участниками, в википедии это не считается зазорным, а наоборот приветствуется.--[[Пайдаланыше:ПешСай|ПешСай]] 11:58, 6 Пеледыш 2011 (UTC)
+::::::Я это сделаю, но только тогда, тебя здесь не будет. А так в этой грязи не хочется копошиться...--[[Пайдаланыше:Lifeway|Lifeway]] 12:01, 6 Пеледыш 2011 (UTC)
