*Empty MediaWiki Message*

--- a/Каттлеелла.mw
+++ b/Каттлеелла.mw
@@ -1,7 +1,7 @@
 {{Таксаҥа
 | лӱм = Каттлеелла
 | сӱрет =  Cattleyella araguaiensis.jpg
-| сӱрет_вуймут =  ''Tainia bicornis''
+| сӱрет_вуймут =  
 | кугыжаныш = [[Кушкыл]]
 | пӧлка = Magnoliophyta 
 | класс = Magnoliopsida 
