*Empty MediaWiki Message*

--- a/Каҥашымаш:Суасэл_Республик.mw
+++ b/Каҥашымаш:Суасэл_Республик.mw
@@ -16,3 +16,4 @@
 :::: Советую посмотреть в "Марий орфографий мутер" Ивана Григорьевича Иванова. Там он предлагает писать "Марийэл". Именно слитно, потому что это по его мнению соответствует фонетике.--[[Пайдаланыше:Санюн Вадик|Санюн Вадик]] 17:42, 5 Пеледыш 2011 (UTC)
 Пошкырт Эл (или Пошкыртэл) или Пошкырт кундем, Суас Эл и т.д. - это разговорные названия. Если мы сейчас позволим себе так их официально называть, то другим, получается, можно будет Марий Эл называть как захочется - Мариландия, Черемиссия, Мариэлия и т.д. Надо уважать братьев "инородцев-нацменов" и раз уж они ввели в оборот Татарстан, то надо так и использовать в официальном режиме. Всякие там Монтенегро - суть имена, придуманные колонизаторами, которые не хотели брать в расчет родные для проживающих в этих странах названия. Должны ли мы им уподобляться? [[Пайдаланыше:Cseremisz Elian|Cseremisz Elian]] 15:26, 6 Пеледыш 2011 (UTC)
 :Интересное суждение. Я думаю, что принцип "око за око", а именно "если мы сейчас позволим себе так их официально называть, то другим, получается, можно будет Марий Эл называть как захочется" тут не очень уместен. В разных народах просто традиции разные. "Марий Эл" итак в разных языках по-разному называют, например, если посмотреть на ссылки интервики статьи [[Марий Эл]], то можно обнаружить такие названия как "Mari dásseváldi" на сербском(se), "Marijsko" на словенском (sk), "Marijska" на хорватском (hr). Даже не финском исопользуется название "Marin tasavalta", а на калмыцком языке вообще "Чермс таңһч" (xal). Врядли они по отношению к марийцам будут являться колонизаторами. Может все дело в уважении к своему родному языку и умении пользоваться марийскими языковыми традициями на деле, а не только на словах?--[[Пайдаланыше:ПешСай|ПешСай]] 12:51, 6 Пеледыш 2011 (UTC)
+:Если говорить о колонизаторах, то, мое мнение, что это русские нарочно пытаются заставить марийцев писать Татарстан, Удмуртий, потому что, когда марийцы будут между собой говорить об этих республиках, тогда русским будет и без знания марийского понятно о чем там говорят марийцы. Теряется марийская идентичность. Чем больше в марийском языке русских слов, тем больше русские начинают высмеивать марийцев в том, что марийский язык несамодостаточен, что он какое-то подобие и производная от русского. В этом плане, использование марийцами слова Татарстан на русский лад, а не своего собственного названия Суас Эл (Суасэл) сродни самоубийству.--[[Пайдаланыше:ПешСай|ПешСай]] 12:59, 6 Пеледыш 2011 (UTC)
