*Empty MediaWiki Message*

--- a/Каҥашымаш:Орхидей-влак.mw
+++ b/Каҥашымаш:Орхидей-влак.mw
@@ -1,1 +1,2 @@
 йамагат - тиде мо?
+:Пагалыме йолташ, каҥашымаш лаштыкыште кидпалым шындаш ит мондо. Кидпале тыге <nowiki>--~~~~</nowiki> шындалтеш. Йамагат - тиде рушла семейство. [[Биологий классификаций]]ым ончал.--[[Пайдаланыше:ПешСай|ПешСай]] 14:26, 6 Пеледыш 2011 (UTC)
