*Empty MediaWiki Message*

--- a/Сольфеджио.mw
+++ b/Сольфеджио.mw
@@ -3,10 +3,10 @@
 2) Семӱзгар (тӱҥ шотышто фортепиано) полшымо дене гласный йӱкла дене йоҥгалтарыме (тугак [[вокализ]] лӱмдалтше) лӱмын келыштарыме мурымаш упражнений-влак.
 3) Ик- да шукыгорнан (семан) сольфеджлымашлык да колыштын анализлымашлык упражнений пого.
 
-[[Категория:Теория музыки]]
-[[Категория:Музыкальные термины]]
-[[Категория:Музыкальное образование]]
-[[Категория:Педагогические технологии]]
+[[Категория:Музык теорий]]
+[[Категория:Музык термин-влак]]
+[[Категория:Музык туныктыш]]
+[[Категория:Педагогике технологий-влак]]
 
 [[be:Сальфеджыа]]
 [[cs:Solmizační slabiky]]
