*Empty MediaWiki Message*

--- a/Пӱчӧ-влак.mw
+++ b/Пӱчӧ-влак.mw
@@ -4,7 +4,7 @@
 | сӱрет_вуймут =  ''Odocoileus virginianus''
 | кугыжаныш = [[Янлык]]
 | пӧлка = Хордан (Chordata)
-| класс = Mammalia 
+| класс = [[Mammalia]] 
 | тӱча = Artiodactyla
 | Ӱлылтӱча = Ruminantia
 | Инпратӱча = Pecora
