*Empty MediaWiki Message*

--- a/Мазама.mw
+++ b/Мазама.mw
@@ -11,7 +11,7 @@
 | инпратӱча = Pecora
 | йамагат = [[Cervidae]]
 | ӱлылйамагат = Capreolinae
-| урлык = [[Mazama]]
+| урлык = '''Mazama'''
 | subdivision_ranks = Тӱрлык-влак
 | subdivision = 7 наре тӱрлык-влак.
 }}
