--- a/Сольфеджио.mw
+++ b/Сольфеджио.mw
@@ -1,6 +1,6 @@
 '''Сольфе́джио''' ({{lang-it|solfeggio}} — '''''соль''''' ден '''''фа''''' музык ното лӱмла гыч ыштыме) — икмыняр ыҥан музык термин.
 1) [[музык колмаш|Музык колмашым]] да музыкле шарнышым (ӓшым) вияҥдыше тунемме дисциплин; тудо музык литератур гыч  ик- да шукыгорнан (семан) ужаш-влакым але лӱмын возымо упражненийлам йӱклам лӱмден  мурымаш (сольфеджлымаш) да тугак йоҥгалтарыме музыкле ужаш-влакым колыштын анализлымаш гыч шога.
-2) Семӱзгар (тӱҥ шотышто фортепиано) полшымо дене гласный йӱкла дене йоҥгалтарыме (тугак [[вокализ]] лӱмдалтше) лӱмын келыштарыме мурымаш упражнений-влак.
+2) Семӱзгар (тӱҥ шотышто фортепиано) полшымо дене [[йоҥйӱк]]ла дене йоҥгалтарыме (тугак [[вокализ]] лӱмдалтше) лӱмын келыштарыме мурымаш упражнений-влак.
 3) Ик- да шукыгорнан (семан) сольфеджлымашлык да колыштын анализлымашлык упражнений пого.
 
 [[Категория:Музык теорий]]
