*Empty MediaWiki Message*

--- a/Сольфеджио.mw
+++ b/Сольфеджио.mw
@@ -4,7 +4,7 @@
 3) Ик- да шукыгорнан (семан) сольфеджлымашлык да колыштын анализлымашлык упражнений пого.
 
 [[Категория:Музык теорий]]
-[[Категория:[[Музык]]
+[[Категория:Музык]]
 [[Категория:Музык термин-влак]]
 [[Категория:Музык туныктыш]]
 [[Категория:Педагогике технологий-влак]]
