*Empty MediaWiki Message*

--- a/Вокализ.mw
+++ b/Вокализ.mw
@@ -16,7 +16,7 @@
 * Музыкальный словарь в рассказах / Михеева Л. — М.: 1986 г. 176 с.
 
 [[Категория:Мурымаш]]
-[[Категория:[[Музык]]
+[[Категория:Музык]]
 [[Категория:Музык теорий]]
 [[Категория:Музык термин-влак]]
 [[Категория:Музык туныктыш]]
