--- a/Мазама.mw
+++ b/Мазама.mw
@@ -20,13 +20,13 @@
 Лӱмжӧ астек (науатль) ''mazame'' (pl) / ''mazatl '' (sg) ('пӱчӧ') мут гыч лектын. 
 
 == Тӱрлык-влак == 
-# ''Mazama americana'' – '''[[Кугу  мазама]]''' 
-# ''Mazama bricenii'' –  
-# ''Mazama chunyi'' –  
-# ''Mazama gouazoubira'' –  '''[[Сур мазама]]''' 
-# ''Mazama nana'' –  
-# ''Mazama pandora'' –  
-# ''Mazama rufina'' –  '''[[Йошкар мазама]]'''
+# ''[[Mazama americana]]'' – '''[[Кугу  мазама]]''' 
+# ''[[Mazama bricenii]]'' –  
+# ''[[Mazama chunyi]]'' –  
+# ''[[Mazama gouazoubira]]'' –  '''[[Сур мазама]]''' 
+# ''[[Mazama nana]]'' –  
+# ''[[Mazama pandora]]'' –  
+# ''[[Mazama rufina]]'' –  '''[[Йошкар мазама]]'''
 
 [[Категорий:Пӱчӧ-влак]]
 {{stub}}
