*Empty MediaWiki Message*

--- a/Компучыр.mw
+++ b/Компучыр.mw
@@ -1,5 +1,5 @@
 [[Файл:Columbia Supercomputer - NASA Advanced Supercomputing Facility.jpg|240px|thumb|NASA Ames Шымлымаш Рӱдерыште верланыше Columbia {{comment|кугукомпучыр|суперкомпьютер}}.]]
-'''Компучыр''' ({{lang-en|computer|}} гыч - шотлышо) — [[информаций]]ым налын саклыше, йондартыше да пайдаланышылан кӱлшӧ сын дене луктын пуышо программлыме машин.
+'''Компьютер''' ({{lang-en|computer|}} гыч - шотлышо) — [[информаций]]ым налын саклыше, йондартыше да пайдаланышылан кӱлшӧ сын дене луктын пуышо программлыме машин.
 
 Компучырын механикле вариантше-влак (механикле сынан компучыр) айдеме тукымын чумыр возалтше эртыкше мучко палдырнышт гынат, икымше электрон компучыр-влак [[XX курым]] кыдалне (1940-1945) ворандаралтыч. Нуно посна пӧлем кугытан лийыныт. Нуно электричествым кызытсе компучыр деч таҥастарымаште икмыняр тӱжем пачаш утла шукерак кочкыныт<ref>1946 ийыште ENIAC 178 кВт электричествым кочкен, кызытсе laptop компучырлан 20 Вт веле кӱлеш. {{Аҥгл важ}} [http://www.upenn.edu/computing/provider/docs/hardware/powerusage.html Approximate Desktop & Notebook Power Usage]</ref>. Кызытсе компучырлан интегральный схема негызым пышта. Тудлан кӧра кызытсе компучыр-влак ончычсо компучыр-влак деч [[амион]]-[[камысыр]] пачаш кугурак лектышым пуышо улыт да палынак изи верым налыт. Куштылго компучыр тыгай изи, тудым изи кӱсен устройствыш чыкаш лиеш. Информационный курымышто персональный компучыр юмоҥа гае, шукышт персональный компучырым ''компучыр'' маныт. Туге гынат, MP3-плеер гыч тӱҥалын сар [[кÿртньыгайык]] марте, модыш гыч тӱҥалын йӧнозанлык робот марте, кӧргыштыме (embedded) компучыр-влак утларак улыт.
 
