--- a/Асцидиерий.mw
+++ b/Асцидиерий.mw
@@ -17,7 +17,8 @@
 '''Асцидиерий''' ({{lang-la|Ascidieria}} ) –  [[Орхидей-влак]] кушкыл-влакын тукымыш пура, [[Азий]]ын шуко верлаште кушшо [[пеледыш (кушкыл)|пеледыш]]. 
 
 == Тӱрлык-влак == 
-
+#''[[Ascidieria longifolia]]''
+#''[[Ascidieria verticillaris]]''
 
 [[Категорий:Орхидей-влак]]
 {{stub}}
