--- a/Вокализ.mw
+++ b/Вокализ.mw
@@ -4,7 +4,7 @@
 
 19-ше курымышто вокализ [[фортепиано]] [[аккомпанент]]ан [[этюд]]-влаклан кӧра популярлыш савырна. Мутлан, ту жапыште [[Конконе, Джузеппе|Джузеппе Конконе]]н вокализше-влак кумдан популярле лийыныт.
 
-Эн палыме вокализ негызеш возымо произведений-влак: [[Рахманинов, Сергей Васильевич|Рахманинов]]ын «[[Вокализ (Рахманинов)|Вокализ]]ше», [[Равель, Морис|М.&nbsp;Равель]]ын «[[Хабанер]]ыже» , [[Вилла-Лобос, Эйтор|Вилла-Лобос]]ын «[[Бразилийсе бахиане|5№-ан Бразилийсе бахиан]]ыже»  и [[Глиэр, Рейнгольд Морицевич|Р.&nbsp;Глиэр]]ын [[Йӱк]] ден [[оркестр]]лык [[концерт]]ше. 
+Эн палыме вокализ негызеш возымо произведений-влак: [[Рахманинов, Сергей Васильевич|Рахманинов]]ын «[[Вокализ (Рахманинов)|Вокализ]]ше», [[Равель, Морис|М.&nbsp;Равель]]ын «[[Хабанер]]ыже» , [[Вилла-Лобос, Эйтор|Вилла-Лобос]]ын «[[Бразилийсе бахиане|5№-ан Бразилийсе бахиан]]ыже», [[Глиэр, Рейнгольд Морицевич|Р.&nbsp;Глиэр]]ын [[Йӱк]] ден [[оркестр]]лык [[концерт]]ше.
 
 == Тугак ончо ==
 * [[Скэт]]
