--- a/Батеманний.mw
+++ b/Батеманний.mw
@@ -18,7 +18,7 @@
 
 == Тӱрлык-влак == 
 # ''[[Batemannia armillata]]'' <small> Rchb.f. (1878)</small>
-# ''[[Batemannia colleyi]]'' <small> Lindl. (1835)</small> - especie tipo
+# ''[[Batemannia colleyi]]'' <small> Lindl. (1835)</small> 
 # ''[[Batemannia leferenzii]]'' <small> Senghas (1993)</small>
 # ''[[Batemannia lepida]]'' <small> Rchb.f. (1878)</small>
 # ''[[Batemannia wolteriana]]'' <small> Schltr. (1915)</small>
