--- a/Путин,_Владимир_Владимирович.mw
+++ b/Путин,_Владимир_Владимирович.mw
@@ -2,6 +2,8 @@
 
 '''Путин Владимир Владимирович''' ({{lang-ru|Владимир Владимирович Путин}},*[[7 Шыжа]] [[1952]]) - [[Россий Федераций]]ын [[премьер-министр]]же.
 
+[[Категорий:Россий]]
+
 [[ab:Владимир Путин]]
 [[af:Wladimir Poetin]]
 [[an:Vladimir Putin]]
