*Empty MediaWiki Message*

--- a/Кугыжаныш.mw
+++ b/Кугыжаныш.mw
@@ -1,5 +1,9 @@
 '''Кугыжаныш''' — мер илышын организацийже, пеҥгыдемдыме кумдыкышто шарла. [[Калык]] тӱшка коклаште кугыжаныш, тӱрлӧ йӧн-влакым кучылтын, еҥ-влак кокласе вашкелшымаш, вашкутырымашым шотышко конда, шке мландыштыже калыкым шке кид йымакыже налеш.
 
+[[Категорий:Кугыжаныш]]
+[[Категорий:Эл]]
+[[Категорий:Мер]]
+
 [[als:Staat]]
 [[an:Estato]]
 [[ar:دولة]]
