--- a/Анатомий.mw
+++ b/Анатомий.mw
@@ -6,6 +6,24 @@
 * '''[[айдемын анатомий]]''' — айдемын капшым сыныма 
 
 == Литератур ==
+* {{книга
+ |автор          = Привес М. Г., Лысенков Н. К.
+ |часть          = 
+ |заглавие       = Анатомия человека
+ |оригинал       = 
+ |ссылка         = 
+ |ответственный  = 
+ |издание        = 11-е переработанное и дополненное
+ |место          = 
+ |издательство   = Гиппократ
+ |год            = 
+ |том            = 
+ |страницы       = 
+ |страниц        = 704
+ |серия          = 
+ |isbn           = 5-8232-0192-3
+ |тираж          = 5000
+}}
 
 [[Категорий:Анатомий| ]]
 
