*Empty MediaWiki Message*

--- a/Анатомий.mw
+++ b/Анатомий.mw
@@ -21,7 +21,7 @@
  |страницы       = 
  |страниц        = 704
  |серия          = 
- |isbn           = 5-8232-0192-3
+ |isbn           = 
  |тираж          = 5000
 }}
 
