*Empty MediaWiki Message*

--- a/Анатомий.mw
+++ b/Анатомий.mw
@@ -6,24 +6,7 @@
 * '''[[айдемын анатомий]]''' — айдемын капшым сыныма 
 
 == Литератур ==
-* {{книга
- |автор          = Привес М. Г., Лысенков Н. К.
- |часть          = 
- |заглавие       = Анатомия человека
- |оригинал       = 
- |ссылка         = 
- |ответственный  = 
- |издание        = 11-е переработанное и дополненное
- |место          = 
- |издательство   = Гиппократ
- |год            = 
- |том            = 
- |страницы       = 
- |страниц        = 704
- |серия          = 
- |isbn           = 
- |тираж          = 5000
-}}
+Привес М. Г., Лысенков Н. К. Анатомия человека. — 11-е переработанное и дополненное. — Гиппократ. — 704 с. — 5000 экз. — ISBN 5-8232-0192-3
 
 [[Категорий:Анатомий| ]]
 
