--- a/Айдемын_анатомий.mw
+++ b/Айдемын_анатомий.mw
@@ -1,2 +1,2 @@
-[[Файл:Anatomical and geometrical proportions - Albrecht Dürer.png|thumb|right|[[Дюрер, Альбрехт|Альбрехт Дюрер]] — Пропорции тела человека]]
+[[Файл:Anatomical and geometrical proportions - Albrecht Dürer.png|thumb|right|[[Дюрер, Альбрехт|Альбрехт Дюрер]] — Айдеме капшын пропорцийже]]
 '''Айдемын анатомий''' ( {{lang-el|ἀνα-}} — кӱшно да {{lang-el2|τέμνω}} — «пӱчкаш», «руаш») — [[анатомий|анатомийын]] ужашыже, кудо айдемын морфологийжем шымла.
