--- a/Айдемын_анатомий.mw
+++ b/Айдемын_анатомий.mw
@@ -1,2 +1,62 @@
 [[Файл:Anatomical and geometrical proportions - Albrecht Dürer.png|thumb|right|[[Дюрер, Альбрехт|Альбрехт Дюрер]] — Айдеме капшын пропорцийже]]
 '''Айдемын анатомий''' ( {{lang-el|ἀνα-}} — кӱшно да {{lang-el2|τέμνω}} — «пӱчкаш», «руаш») — [[анатомий|анатомийын]] ужашыже, кудо айдемын морфологийжем шымла.
+
+[[ace:Anatomi manusia]]
+[[an:Anatomía humana]]
+[[ar:تشريح الإنسان]]
+[[bat-smg:Žmuogaus anatuomėjė]]
+[[bcl:Anatomiya na Pan-ibabaw kan Tawo]]
+[[bg:Анатомия на човека]]
+[[bn:মানব অঙ্গসংস্থানবিদ্যা]]
+[[br:Korfadurezh denel]]
+[[ca:Anatomia humana]]
+[[cv:Çын анатомийĕ]]
+[[cy:Anatomeg ddynol]]
+[[en:Human anatomy]]
+[[eo:Homa anatomio]]
+[[es:Anatomía humana]]
+[[et:Inimese anatoomia]]
+[[eu:Giza anatomia]]
+[[fa:کالبدشناسی انسان]]
+[[fi:Ihmisen anatomia]]
+[[fr:Anatomie humaine]]
+[[fy:Minsklik lichem]]
+[[gl:Anatomía humana]]
+[[gn:Anatomia yvypóragua]]
+[[hi:मानव शारीरिकी]]
+[[hr:Anatomija čovjeka]]
+[[hu:Anthropotomia]]
+[[id:Anatomi manusia]]
+[[is:Líffærafræði mannsins]]
+[[it:Anatomia umana]]
+[[iu:ᑎᒥ/timi]]
+[[ja:人体解剖学]]
+[[jbo:remna xadyske]]
+[[jv:Anatomi manungsa]]
+[[kk:Адам анатомиясы]]
+[[ko:인체해부학]]
+[[ku:Laşê mirovan]]
+[[lt:Žmogaus anatomija]]
+[[lv:Cilvēka anatomija]]
+[[mk:Анатомија на човекот]]
+[[mrj:Эдемӹн анатомижӹ]]
+[[my:လူသား ခန္ဓာဗေဒ]]
+[[nl:Menselijke anatomie]]
+[[nn:Menneskeanatomi]]
+[[no:Menneskets anatomi]]
+[[pl:Anatomia człowieka]]
+[[pt:Anatomia humana]]
+[[qu:Runap kurkun]]
+[[ro:Anatomie umană]]
+[[si:මානව කායවිච්ඡේදවේදය]]
+[[sk:Anatómia človeka]]
+[[sl:Anatomija človeka]]
+[[sq:Anatomia e njeriut]]
+[[su:Anatomi manusa]]
+[[sv:Människans anatomi]]
+[[th:กายวิภาคศาสตร์มนุษย์]]
+[[uk:Анатомія людини]]
+[[ur:انسانی تشریح]]
+[[yi:מענטשלעכע אנאטאמיע]]
+[[zh:人体解剖学]]
+[[zh-min-nan:Sin-khu]]
