*Empty MediaWiki Message*

--- a/Каракал.mw
+++ b/Каракал.mw
@@ -13,7 +13,7 @@
 | урлык = '''Caracal'''
 | тӱрлык = '''Caracal caracal'''
 }}
-'''Каракал''' ({{lang-la|Caracal caracal}} ; < {{lang-tr|karakulak}} < ''kara'' [кара] "шем" + ''kulak'' [кулак] "пылыш") –  Касвел [[Азий]]ын да [[Африка|Африкын]] [[пырыс-влак]] (Felidae) йамагатын гыч кугу [[янлык]]. Капше 65—82 см, почше 25—30 см, нелытше 11—19 кг. 
+'''Каракал''' ({{lang-la|Caracal caracal}} ; < {{lang-tr|karakulak}} < ''kara'' [кара] "шем" + ''kulak'' [кулак] "пылыш") –  Касвел [[Азий]]ын да [[Африка|Африкын]] [[пырыс-влак]] (Felidae) йамагат гыч кугу [[янлык]]. Капше 65—82 см, почше 25—30 см, нелытше 11—19 кг. 
 
 [[Категорий:Пырыс-влак]]
 {{stub}}
