*Empty MediaWiki Message*

--- a/Тӱрк_йылме-влак.mw
+++ b/Тӱрк_йылме-влак.mw
@@ -5,7 +5,7 @@
 
 * [[Акрет тӱрк йылме-влак]];
 * [[курыкалтай йылме-влак]];
-* [[карлук йыле-влак]];
+* [[карлук йылме-влак]];
 * [[кыпчак йылме-влак]];
 * [[огуз йылме-влак]];
 * [[саян йылме-влак]];
