*Empty MediaWiki Message*

--- a/Белоглоттис.mw
+++ b/Белоглоттис.mw
@@ -14,7 +14,7 @@
 | subdivision_ranks = Тӱрлык-влак
 | subdivision = 8 наре тӱрлык-влак.
 }}
-'''Белоглоттис''' ({{lang-la|Beloglottis}} ) –  [[Орхидей-влак]] кушкыл-влакын тукымыш пура, Йӱдвел ден Кечывалвел [[Америка|Америкын]] шуко верлаште кушшо [[пеледыш (кушкыл)|пеледыш]]. 
+'''Белоглоттис''' ({{lang-la|Beloglottis}}  < {{lang-el|belos}} «пикш» да {{lang-el2|glotta}} «йылме») –  [[Орхидей-влак]] кушкыл-влакын тукымыш пура, Йӱдвел ден Кечывалвел [[Америка|Америкын]] шуко верлаште кушшо [[пеледыш (кушкыл)|пеледыш]]. 
 
 == Тӱрлык-влак == 
 # ''[[Beloglottis boliviensis]]'' <small> Schltr. (1920)</small>
