--- a/Холокост.mw
+++ b/Холокост.mw
@@ -1,1 +1,112 @@
-'''Холокост'''-историй факт, кудыжо шке жапыште шуко еврей влакым национальность шот дене концлагерьлаште индырен пуштыныт.
+'''Холокост''' — эртык факт, кудыжо шке жапыште шуко еврей-влакым национальность шот дене концлагерьлаште индырен пуштыныт.
+
+[[Категорий:Холокост]]
+[[Категорий:Дискриминаций]]
+[[Категорий:Геноцид]]
+[[Категорий:Антисемитизм]]
+
+{{Link FA|ar}}
+{{Link FA|el}}
+{{Link FA|hr}}
+{{Link FA|pt}}
+{{Link FA|sw}}
+[[af:Sjoa]]
+[[an:Holocausto]]
+[[ang:Eallbærnet]]
+[[ar:هولوكوست]]
+[[arz:هولوكوست]]
+[[ast:Holocaustu]]
+[[az:Holokost]]
+[[bat-smg:Huoluokausts]]
+[[be:Масавае знішчэнне яўрэйскага насельніцтва, 1933-1945]]
+[[be-x-old:Галакост]]
+[[bg:Холокост]]
+[[bn:হলোকস্ট]]
+[[br:Loskaberzh]]
+[[bs:Holokaust]]
+[[ca:Holocaust]]
+[[cs:Holokaust]]
+[[cv:Холокост]]
+[[cy:Yr Holocost]]
+[[da:Holocaust]]
+[[de:Holocaust]]
+[[el:Ολοκαύτωμα]]
+[[en:The Holocaust]]
+[[eo:Holokaŭsto]]
+[[es:Holocausto]]
+[[et:Holokaust]]
+[[eu:Holokaustoa]]
+[[fa:هولوکاست]]
+[[fi:Holokausti]]
+[[fiu-vro:Holokaust]]
+[[fr:Shoah]]
+[[fy:Holocaust]]
+[[ga:Uileloscadh]]
+[[gd:Uile-losgadh]]
+[[gl:Holocausto]]
+[[he:השואה]]
+[[hi:यहूदी अग्निकांड]]
+[[hr:Holokaust]]
+[[hu:Holokauszt]]
+[[hy:Հոլոքոստ]]
+[[ia:Holocausto]]
+[[id:Holocaust]]
+[[is:Helförin]]
+[[it:Olocausto]]
+[[ja:ホロコースト]]
+[[jv:Holocaust]]
+[[ka:ჰოლოკოსტი]]
+[[kk:Холокост]]
+[[ko:홀로코스트]]
+[[la:Soa]]
+[[lad:Olokósto]]
+[[lb:Holocaust]]
+[[lt:Holokaustas]]
+[[lv:Holokausts]]
+[[mk:Холокауст]]
+[[ml:ഹോളോകോസ്റ്റ്]]
+[[mn:Холокост]]
+[[mr:होलोकॉस्ट]]
+[[ms:Holokus]]
+[[mwl:Houlocausto]]
+[[nds:Schoah]]
+[[new:होलोकस्ट]]
+[[nl:Holocaust]]
+[[nn:Holocaust]]
+[[no:Holocaust]]
+[[nov:Li Holokauste]]
+[[oc:Olocaust]]
+[[pam:Holocaust]]
+[[pl:Holocaust]]
+[[pms:Olocàust]]
+[[pnb:ہولو کاسٹ]]
+[[pt:Holocausto]]
+[[qu:Ulukawstu]]
+[[rmy:Holokausto]]
+[[ro:Holocaust]]
+[[ru:Холокост]]
+[[rw:Itsembabwoko ry’Abayahudi]]
+[[scn:Olucaustu]]
+[[sco:Holocaust]]
+[[sh:Holokaust]]
+[[simple:The Holocaust]]
+[[sk:Holokaust]]
+[[sl:Holokavst]]
+[[so:Holokost]]
+[[sq:Holokausti]]
+[[sr:Холокауст]]
+[[stq:Holocaust]]
+[[sv:Förintelsen]]
+[[sw:Maangamizi makuu dhidi ya Wayahudi wa Ulaya]]
+[[ta:பெரும் இன அழிப்பு]]
+[[th:การล้างชาติโดยนาซี]]
+[[tl:Ang Holokausto]]
+[[tr:Holokost]]
+[[uk:Голокост]]
+[[ur:مرگ انبوہ]]
+[[vi:Holocaust]]
+[[war:An Holokausto]]
+[[yi:חורבן אייראפע]]
+[[zh:猶太人大屠殺]]
+[[zh-min-nan:Shoah]]
+[[zh-yue:猶太人大屠殺]]
