--- a/Каҥашымаш:Сапаев,_Эрик_Никитич.mw
+++ b/Каҥашымаш:Сапаев,_Эрик_Никитич.mw
@@ -35,3 +35,5 @@
 :::Происхождение первого назвать точно не могу, а про два вторые, [http://peshsaj.blogspot.com/2011/03/blog-post.html#comments как говорит МариУвер], их предложил В.Газетов.--[[Пайдаланыше:ПешСай|ПешСай]] 07:42, 6 Ага 2011 (UTC)
 ***Ну раз Газетов предложил, мне кажется наиболее удобным вариант СЕМЛЫЗЕ. [[Пайдаланыше:Azimbaj|Azimbaj]] 17:46, 8 Ага 2011 (UTC)
 ****Да, меня тоже вариант "семлызе" устраивает. Думаю, если никто больше высказаться не желает, то на нем и остановимся.--[[Пайдаланыше:ПешСай|ПешСай]] 18:33, 15 Ага 2011 (UTC)
+
+*"Струнный-влаклан" я бы предложил заменить на "кылан семӱзгар-влаклан". Традиционно в марийском языке имена прилагательные не образовывались при помощи -ный. [[Пайдаланыше:Vasli|Vasli]] 15:35, 9 Пеледыш 2011 (UTC)
