/* {{comment|Струнный|марла-Кылан}}-влаклан */

--- a/Сапаев,_Эрик_Никитич.mw
+++ b/Сапаев,_Эрик_Никитич.mw
@@ -79,11 +79,12 @@
 ====Фортепианолан ====
 * Марш (1951)
 * Вариаций-влак (Вариации) (1956)
-==== {{comment|Струнный|марла-Кылан}}-влаклан ====
+==== Кылан семӱзгар-влаклан ====
 * Скрипка ден фортепианолан поэме (1954)
 * Скрипка ден фортепианолан пьесе-влак (1957)
 * Альтлан поэме (1955)
 * Струнный квартет (1961)
+
 === Мурашлан келыштарыме произведений ===
 * Шочмо верыште
 * Муро-влак
