*Empty MediaWiki Message*

--- a/Каҥашымаш:Сапаев,_Эрик_Никитич.mw
+++ b/Каҥашымаш:Сапаев,_Эрик_Никитич.mw
@@ -36,4 +36,6 @@
 ***Ну раз Газетов предложил, мне кажется наиболее удобным вариант СЕМЛЫЗЕ. [[Пайдаланыше:Azimbaj|Azimbaj]] 17:46, 8 Ага 2011 (UTC)
 ****Да, меня тоже вариант "семлызе" устраивает. Думаю, если никто больше высказаться не желает, то на нем и остановимся.--[[Пайдаланыше:ПешСай|ПешСай]] 18:33, 15 Ага 2011 (UTC)
 
-*"Струнный-влаклан" я бы предложил заменить на "кылан семӱзгар-влаклан". Традиционно в марийском языке имена прилагательные не образовывались при помощи -ный. [[Пайдаланыше:Vasli|Vasli]] 15:35, 9 Пеледыш 2011 (UTC)
+*'''"Струнный-влаклан"''' я бы предложил заменить на "кылан семӱзгар-влаклан". Традиционно в марийском языке имена прилагательные не образовывались при помощи -ный. [[Пайдаланыше:Vasli|Vasli]] 15:35, 9 Пеледыш 2011 (UTC)
+
+*'''"Сем"''' семантическое поле слова "сем" в марийском уже, чем у слова "музык", соответственно заменять слово "музык" словом "сем", считаю, некорректным. "Сем" в марийском языке, прежде всего, обозначает "мелодию", в какой-то степени в определенном контексте "музыку". Приведу пример "Симфоний - тиде ала-мыняр сем корнан (семгорнан) музык улеш". "Симфония - это музыка с несколькими мелодическими линиями". Если следовать предложенной здесь схеме то получится  "Симфоний - тиде ала-мыняр сем корнан (семгорнан) сем улеш". "Музык" - это не руссизм, это интернационализм, в эстонском есть слово "viis" - "мелодия", есть "muusika" - "музыка", в финском "sävel" - "мелодия" и "musiikki". [[Пайдаланыше:Vasli|Vasli]] 15:59, 9 Пеледыш 2011 (UTC)
