--- a/Каҥашымаш:Сапаев,_Эрик_Никитич.mw
+++ b/Каҥашымаш:Сапаев,_Эрик_Никитич.mw
@@ -39,3 +39,4 @@
 *'''"Струнный-влаклан"''' я бы предложил заменить на "кылан семӱзгар-влаклан". Традиционно в марийском языке имена прилагательные не образовывались при помощи -ный. [[Пайдаланыше:Vasli|Vasli]] 15:35, 9 Пеледыш 2011 (UTC)
 
 *'''"Сем"''' семантическое поле слова "сем" в марийском уже, чем у слова "музык", соответственно заменять слово "музык" словом "сем", считаю, некорректным. "Сем" в марийском языке, прежде всего, обозначает "мелодию", в какой-то степени в определенном контексте "музыку". Приведу пример "Симфоний - тиде ала-мыняр сем корнан (семгорнан) музык улеш". "Симфония - это музыка с несколькими мелодическими линиями". Если следовать предложенной здесь схеме то получится  "Симфоний - тиде ала-мыняр сем корнан (семгорнан) сем улеш". "Музык" - это не руссизм, это интернационализм, в эстонском есть слово "viis" - "мелодия", есть "muusika" - "музыка", в финском "sävel" - "мелодия" и "musiikki". [[Пайдаланыше:Vasli|Vasli]] 15:59, 9 Пеледыш 2011 (UTC)
+::Струнные переводить как кылан поддерживаю. Можно ли музыку переводить как мурсем? Что вообще означает чтово мурсем?--[[Пайдаланыше:ПешСай|ПешСай]] 16:25, 9 Пеледыш 2011 (UTC)
