--- a/Категорий:Танле_черке.mw
+++ b/Категорий:Танле_черке.mw
@@ -1,21 +1,26 @@
-{{Commonscat|Orthodox Church}}
+{{Commonscat|Orthodox Churches (organizations) by country}}
 
 [[Категорий:Танле тын]]
 
 [[ast:Categoría:Ilesia ortodoxa]]
 [[bg:Категория:Православни църкви]]
+[[ca:Categoria:Esglésies ortodoxes autocèfales]]
 [[cs:Kategorie:Pravoslavné církve]]
 [[de:Kategorie:Orthodoxe Kirche]]
 [[el:Κατηγορία:Ορθόδοξες Εκκλησίες]]
 [[en:Category:Eastern Orthodox church bodies and patriarchates]]
 [[eo:Kategorio:Ortodoksa Eklezio]]
 [[es:Categoría:Iglesia ortodoxa]]
+[[fi:Luokka:Ortodoksiset paikalliskirkot]]
 [[fr:Catégorie:Église orthodoxe]]
-[[frp:Catègorie:Égllése ortodoxe]]
-[[gl:Categoría:Igrexa Ortodoxa]]
+[[ja:Category: 各国・各地域の正教会]]
 [[ka:კატეგორია:მართლმადიდებელი ეკლესიები]]
 [[mk:Категорија:Православни цркви]]
+[[nn:Kategori:Ortodokse kyrkjesamfunn]]
 [[pl:Kategoria:Kościoły prawosławne]]
+[[pt:Categoria:Igreja Ortodoxa]]
 [[ru:Категория:Православные церкви]]
 [[sr:Категорија:Православна црква]]
+[[sv:Kategori:Ortodoxa kyrkor]]
 [[uk:Категорія:Православні церкви]]
+[[zh:Category:各国东正教]]
