--- a/Компучыр.mw
+++ b/Компучыр.mw
@@ -5,7 +5,7 @@
 
 Инструкций лӱмерым шарнен кертмаш да тудым ыштен шуктмаш компучырым шукышӧрынаным ыштен, [[калькулятор]] дечын ойырен. Инструкций лӱмер [[программе]] маналтеш. [[Чӧрч-Тӱринг тезис]] тиде шукышӧрынан улмыжым математик семын умылтара: кеч-могай эн изи кертмаш дене компучыр керек-могай вес компучыр семын тыгаяк сомылым ыштен кертеш. Садлан ситыше жапым да шарнымверым (storage) пуаш гын, вапшбук гычын тӱҥалын кугукомпучыр марте икгай шотлымаш сомылым чыланат ыштен кертыт.
 
-== Компучырын эртыкше ==
+== Компьютерын эртыкше ==
 [[Файл:Jacquard.loom.full.view.jpg|thumb|Шанче да йӧнозанлык тоштерыште, [[Манчестер]]ыште, [[Кугу Британий]]ыште [[Джакӱардын куымо станже]]. Икымше программирований кертмаш дене устройстве-влак коклаште тиде станже икте улеш.]]
 
 Икымше гана «компучыр» мутым [[Аҥгличан йылме|аҥгличан йылмыште]]  [[1613]] ийыште ойленыт. Тунам шотлымашым вуйлатыше айдемым тыге маныныт. XX курым пелыштыже марте компучыр мутым туге кученыт. [[XIX курым]] мучаште компучыр мут дене шотлымашым ыштыше машинам манаш тӱҥалыныт.
