*Empty MediaWiki Message*

--- a/Шылгочшо.mw
+++ b/Шылгочшо.mw
@@ -1,5 +1,5 @@
 {{Таксаҥа
-| лӱм = Сут-влак
+| лӱм = Шылгочшо
 | сӱрет = Male Lion and Cub Chitwa South Africa Luca Galuzzi 2004.JPG
 | сӱрет2 = Carnassials.jpg
 | сӱрет_вуймут =  
@@ -14,7 +14,7 @@
 | класс = [[Шӧр пукшышо]] 
 | тӱча = '''Carnivora'''
 }}
-'''Сут-влак''' ({{lang-la|Carnivora}} ) – [[Шӧр пукшышо]] класс гыч изи да кугу [[янлык]] тӱча. Чылаже 287 еш куэ уло.
+'''Шылгочшо''' ({{lang-la|Carnivora}} ) – [[Шӧр пукшышо]] класс гыч изи да кугу [[янлык]] тӱча. Чылаже 287 еш куэ уло.
 
 == Систематика == 
 * Ӱлылтӱча : [[Feliformia]] 
