*Empty MediaWiki Message*

--- a/Пырыс-влак.mw
+++ b/Пырыс-влак.mw
@@ -3,9 +3,9 @@
 | сӱрет = Namibie Etosha Leopard 01edit.jpg
 | сӱрет_вуймут =   ''Panthera pardus''
 | кугыжаныш = [[Янлык]]
-| пӧлка = Хордан (Chordata)
-| класс = Mammalia 
-| тӱча = Carnivora
+| пӧлка = Хордан 
+| класс = [[Шӧр пукшышо]] 
+| тӱча = [[Шылгочшо]]
 | ӱлылтӱча = Feliformia
 | йамагат = '''Felidae'''
 }} 
