*Empty MediaWiki Message*

--- a/Мангуст-влак.mw
+++ b/Мангуст-влак.mw
@@ -3,9 +3,9 @@
 | сӱрет = Dwarf mongoose Korkeasaari zoo.jpg
 | сӱрет_вуймут =  ''Helogale parvula''
 | кугыжаныш = [[Янлык]]
-| пӧлка = Хордан
+| пӧлка = Хордан 
 | класс = [[Шӧр пукшышо]] 
-| тӱча = [[Сут-влак]]
+| тӱча = [[Шылгочшо]]
 | ӱлылтӱча = Feliformia
 | йамагат = '''Herpestidae'''
 }}
