--- a/Пий-влак.mw
+++ b/Пий-влак.mw
@@ -3,9 +3,9 @@
 | сӱрет = NIEdot306.jpg
 | сӱрет_вуймут =   
 | кугыжаныш = [[Янлык]]
-| пӧлка = Хордан (Chordata)
-| класс = Mammalia 
-| тӱча = Carnivora
+| пӧлка = Хордан 
+| класс = [[Шӧр пукшышо]] 
+| тӱча = [[Шылгочшо]]
 | ӱлылтӱча = Caniformia 
 | йамагат = '''Canidae'''
 }}
