*Empty MediaWiki Message*

--- a/Маска.mw
+++ b/Маска.mw
@@ -3,9 +3,9 @@
 | сӱрет = Medved mzoo.jpg
 | сӱрет_вуймут =  Узо [[кӱрен маска]]
 | кугыжаныш = [[Янлык]]
-| пӧлка = Хордан (Chordata)
-| класс = Mammalia 
-| тӱча = Carnivora
+| пӧлка = Хордан 
+| класс = [[Шӧр пукшышо]] 
+| тӱча = [[Шылгочшо]]
 | йамагат = Ursidae 
 | subdivision_ranks = Ӱлылйамагат-влак
 | subdivision = 3 наре ӱлылйамагат-влак.
