*Empty MediaWiki Message*

--- a/Йос-влак.mw
+++ b/Йос-влак.mw
@@ -3,9 +3,9 @@
 | сӱрет = Ilder.jpg
 | сӱрет_вуймут =  ''Mustela putorius''
 | кугыжаныш = [[Янлык]]
-| пӧлка = Хордан (Chordata)
-| класс = Mammalia 
-| тӱча = Carnivora
+| пӧлка = Хордан 
+| класс = [[Шӧр пукшышо]] 
+| тӱча = [[Шылгочшо]]
 | ӱлылтӱча = Caniformia
 | кӱшылйамагат =  	Musteloidea
 | йамагат = Mustelidae
