*Empty MediaWiki Message*

--- a/Шурмаҥше.mw
+++ b/Шурмаҥше.mw
@@ -4,9 +4,9 @@
 | сӱрет2 = Lynx range.png
 | сӱрет_вуймут =   
 | кугыжаныш = [[Янлык]]
-| пӧлка = Хордан (Chordata)
-| класс = Mammalia 
-| тӱча = Carnivora
+| пӧлка = Хордан 
+| класс = [[Шӧр пукшышо]] 
+| тӱча = [[Шылгочшо]]
 | ӱлылтӱча = Feliformia
 | йамагат = [[Felidae]]
 | ӱлылйамагат = Felinae 
