*Empty MediaWiki Message*

--- a/Арыслан.mw
+++ b/Арыслан.mw
@@ -4,9 +4,9 @@
 | сӱрет2 = Serengeti Lion 2.jpg
 | сӱрет_вуймут =  Узо  ↑  Ава  ↓ 
 | кугыжаныш = [[Янлык]]
-| пӧлка = Хордан (Chordata)
-| класс = Mammalia 
-| тӱча = Carnivora
+| пӧлка = Хордан 
+| класс = [[Шӧр пукшышо]] 
+| тӱча = [[Шылгочшо]]
 | йамагат = [[Felidae]]
 | урлык = Panthera 
 | тӱрлык = Panthera leo
