--- a/Манул.mw
+++ b/Манул.mw
@@ -4,9 +4,9 @@
 | сӱрет2 = Otocolobus manul -Zurich Zoo-8a.jpg
 | сӱрет_вуймут =   
 | кугыжаныш = [[Янлык]]
-| пӧлка = Хордан (Chordata)
-| класс = Mammalia 
-| тӱча = Carnivora
+| пӧлка = Хордан 
+| класс = [[Шӧр пукшышо]] 
+| тӱча = [[Шылгочшо]]
 | ӱлылтӱча = Feliformia
 | йамагат = [[Felidae]]
 | ӱлылйамагат = Felinae
