*Empty MediaWiki Message*

--- a/Пума_(урлык).mw
+++ b/Пума_(урлык).mw
@@ -3,9 +3,9 @@
 | сӱрет = CMM MountainLion.jpg
 | сӱрет_вуймут =   ''Puma concolor''
 | кугыжаныш = [[Янлык]]
-| пӧлка = Хордан (Chordata)
-| класс = Mammalia 
-| тӱча = Carnivora
+| пӧлка = Хордан 
+| класс = [[Шӧр пукшышо]] 
+| тӱча = [[Шылгочшо]]
 | ӱлылтӱча = Feliformia
 | йамагат = [[Felidae]]
 | ӱлылйамагат = Felinae
