--- a/Евразий_шурмаҥше.mw
+++ b/Евразий_шурмаҥше.mw
@@ -3,9 +3,9 @@
 | сӱрет = Lynx lynx 1 (Martin Mecnarowski).jpg
 | сӱрет_вуймут =   
 | кугыжаныш = [[Янлык]]
-| пӧлка = Хордан (Chordata)
-| класс = Mammalia 
-| тӱча = Carnivora
+| пӧлка = Хордан 
+| класс = [[Шӧр пукшышо]] 
+| тӱча = [[Шылгочшо]]
 | ӱлылтӱча = Feliformia
 | йамагат = [[Felidae]]
 | ӱлылйамагат = Felinae 
