*Empty MediaWiki Message*

--- a/Пампас_пырыс.mw
+++ b/Пампас_пырыс.mw
@@ -3,9 +3,9 @@
 | сӱрет = Leopardus pajeros 20101006.jpg
 | сӱрет_вуймут =   
 | кугыжаныш = [[Янлык]]
-| пӧлка = Хордан (Chordata)
-| класс = Mammalia 
-| тӱча = Carnivora
+| пӧлка = Хордан 
+| класс = [[Шӧр пукшышо]] 
+| тӱча = [[Шылгочшо]]
 | ӱлылтӱча = Feliformia
 | йамагат = [[Felidae]]
 | ӱлылйамагат = Felinae
