--- a/Маргай.mw
+++ b/Маргай.mw
@@ -3,9 +3,9 @@
 | сӱрет = Margaykat Leopardus wiedii.jpg
 | сӱрет_вуймут =   
 | кугыжаныш = [[Янлык]]
-| пӧлка = Хордан (Chordata)
-| класс = Mammalia 
-| тӱча = Carnivora
+| пӧлка = Хордан 
+| класс = [[Шӧр пукшышо]] 
+| тӱча = [[Шылгочшо]]
 | ӱлылтӱча = Feliformia
 | йамагат = [[Felidae]]
 | ӱлылйамагат = Felinae
