--- a/Каракал.mw
+++ b/Каракал.mw
@@ -4,9 +4,9 @@
 | сӱрет2 = Caracal caracal -Toronto Zoo, Ontario, Canada-8b.jpg
 | сӱрет_вуймут =   
 | кугыжаныш = [[Янлык]]
-| пӧлка = Хордан (Chordata)
-| класс = Mammalia 
-| тӱча = Carnivora
+| пӧлка = Хордан 
+| класс = [[Шӧр пукшышо]] 
+| тӱча = [[Шылгочшо]]
 | ӱлылтӱча = Feliformia
 | йамагат = [[Felidae]]
 | ӱлылйамагат = Felinae
