*Empty MediaWiki Message*

--- a/Вӱд_мангуст.mw
+++ b/Вӱд_мангуст.mw
@@ -5,7 +5,7 @@
 | кугыжаныш = [[Янлык]]
 | пӧлка = Хордан 
 | класс = [[Шӧр пукшышо]] 
-| тӱча = [[Сут-влак]]
+| тӱча = [[Шылгочшо]]
 | ӱлылтӱча = Feliformia
 | йамагат = [[Herpestidae]]
 | ӱлылйамагат = Herpestinae
