--- a/Кузиманза.mw
+++ b/Кузиманза.mw
@@ -6,7 +6,7 @@
 | кугыжаныш = [[Янлык]]
 | пӧлка = Хордан 
 | класс = [[Шӧр пукшышо]] 
-| тӱча = [[Сут-влак]]
+| тӱча = [[Шылгочшо]]
 | ӱлылтӱча = Feliformia
 | йамагат = [[Herpestidae]]
 | урлык = '''Crossarchus''' 
