*Empty MediaWiki Message*

--- a/Пире.mw
+++ b/Пире.mw
@@ -3,10 +3,10 @@
 | сӱрет = Kolmården Wolf.jpg
 | сӱрет_вуймут =  ''Canis lupus lupus'
 | кугыжаныш = [[Янлык]]
-| пӧлка = Хордан (Chordata)
-| класс = Mammalia 
-| тӱча = Carnivora
-| йамагат = Canidae
+| пӧлка = Хордан 
+| класс = [[Шӧр пукшышо]] 
+| тӱча = [[Шылгочшо]]
+| йамагат = [[Canidae]]
 | ӱлылйамагат Caninae
 | йыжыҥ = 	Canini
 | урлык = Canis
