*Empty MediaWiki Message*

--- a/Пий.mw
+++ b/Пий.mw
@@ -4,9 +4,9 @@
 | сӱрет = Benedykt 2.jpg
 | сӱрет_вуймут =  Сенбернар
 | кугыжаныш = [[Янлык]]
-| пӧлка = Хордан (Chordata)
-| класс = Mammalia 
-| тӱча = Carnivora
+| пӧлка = Хордан 
+| класс = [[Шӧр пукшышо]] 
+| тӱча = [[Шылгочшо]]
 | ӱлылтӱча = Caniformia 
 | йамагат = [[Canidae]]
 | ӱлылйамагат Caninae
