--- a/Койот.mw
+++ b/Койот.mw
@@ -3,9 +3,9 @@
 | сӱрет = Coyote by Rebecca Richardson.jpg
 | сӱрет_вуймут =   
 | кугыжаныш = [[Янлык]]
-| пӧлка = Хордан (Chordata)
-| класс = Mammalia 
-| тӱча = Carnivora
+| пӧлка = Хордан 
+| класс = [[Шӧр пукшышо]] 
+| тӱча = [[Шылгочшо]]
 | ӱлылтӱча = Caniformia 
 | йамагат = [[Canidae]]
 | ӱлылйамагат = Caninae
