*Empty MediaWiki Message*

--- a/Йошкар_пире.mw
+++ b/Йошкар_пире.mw
@@ -3,9 +3,9 @@
 | сӱрет = Cuon.alpinus-cut.jpg
 | сӱрет_вуймут =   ''Cuon alpinus''
 | кугыжаныш = [[Янлык]]
-| пӧлка = Хордан (Chordata)
-| класс = Mammalia 
-| тӱча = Carnivora
+| пӧлка = Хордан 
+| класс = [[Шӧр пукшышо]] 
+| тӱча = [[Шылгочшо]]
 | ӱлылтӱча = Caniformia 
 | йамагат = [[Canidae]]
 | ӱлылйамагат = Caninae
