--- a/Рывыж.mw
+++ b/Рывыж.mw
@@ -3,9 +3,9 @@
 | сӱрет = Urocyon cinereoargenteus.jpg
 | сӱрет_вуймут =   ''Cuon alpinus''
 | кугыжаныш = [[Янлык]]
-| пӧлка = Хордан (Chordata)
-| класс = Mammalia 
-| тӱча = Carnivora
+| пӧлка = Хордан 
+| класс = [[Шӧр пукшышо]] 
+| тӱча = [[Шылгочшо]]
 | ӱлылтӱча = Caniformia 
 | йамагат = [[Canidae]]
 | ӱлылйамагат = Caninae
