*Empty MediaWiki Message*

--- a/Тулрывыж.mw
+++ b/Тулрывыж.mw
@@ -4,9 +4,9 @@
 | сӱрет2 = Fuchs Profil.jpg 
 | сӱрет_вуймут =   
 | кугыжаныш = [[Янлык]]
-| пӧлка = Хордан (Chordata)
-| класс = Mammalia 
-| тӱча = Carnivora
+| пӧлка = Хордан 
+| класс = [[Шӧр пукшышо]] 
+| тӱча = [[Шылгочшо]]
 | ӱлылтӱча = Caniformia 
 | йамагат = [[Canidae]]
 | ӱлылйамагат = Caninae
