*Empty MediaWiki Message*

--- a/Кугу_панда.mw
+++ b/Кугу_панда.mw
@@ -4,9 +4,9 @@
 | сӱрет = Grosser Panda.JPG
 | сӱрет_вуймут =   
 | кугыжаныш = [[Янлык]]
-| пӧлка = Хордан (Chordata)
-| класс = Mammalia 
-| тӱча = Carnivora
+| пӧлка = Хордан 
+| класс = [[Шӧр пукшышо]] 
+| тӱча = [[Шылгочшо]]
 | йамагат = Ursidae
 | ӱлылйамагат Ailuropodinae 
 | урлык = Ailuropoda
