*Empty MediaWiki Message*

--- a/Кугу_панда.mw
+++ b/Кугу_панда.mw
@@ -7,7 +7,7 @@
 | пӧлка = Хордан 
 | класс = [[Шӧр пукшышо]] 
 | тӱча = [[Шылгочшо]]
-| йамагат = Ursidae
+| йамагат = [[Ursidae]]
 | ӱлылйамагат Ailuropodinae 
 | урлык = Ailuropoda
 | тӱрлык = Ailuropoda melanoleuca 
