*Empty MediaWiki Message*

--- a/Кӱрен_маска.mw
+++ b/Кӱрен_маска.mw
@@ -3,10 +3,10 @@
 | сӱрет = Ursus arctos-Bear-Female+cub-Polar Zoo Norway.JPG
 | сӱрет_вуймут =   Ава  кӱрен маска да маскаиге
 | кугыжаныш = [[Янлык]]
-| пӧлка = Хордан (Chordata)
-| класс = Mammalia 
-| тӱча = Carnivora
-| йамагат = Ursidae
+| пӧлка = Хордан 
+| класс = [[Шӧр пукшышо]] 
+| тӱча = [[Шылгочшо]]
+| йамагат = [[Ursidae]]
 | ӱлылйамагат Ursinae 
 | урлык = Ursus 
 | тӱрлык = Ursus arctos 
