--- a/Ош_маска.mw
+++ b/Ош_маска.mw
@@ -3,10 +3,10 @@
 | сӱрет = Ursus maritimus Steve Amstrup.jpg
 | сӱрет_вуймут =   Ава  ош маска да маскаиге-влак 
 | кугыжаныш = [[Янлык]]
-| пӧлка = Хордан (Chordata)
-| класс = Mammalia 
-| тӱча = Carnivora
-| йамагат = Ursidae
+| пӧлка = Хордан 
+| класс = [[Шӧр пукшышо]] 
+| тӱча = [[Шылгочшо]]
+| йамагат = [[Ursidae]]
 | ӱлылйамагат Ursinae 
 | урлык = Ursus 
 | тӱрлык = Ursus maritimus
